# workshop-python-dicas

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  read_csv_100M_boas_praticas.py
